# etherip-xdp

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md  mise.toml  sitrep.md
.cargo/: config.toml
.github/scripts/: download_kernel_images.sh
.github/workflows/: _deb.yml  _fuzz.yml  _integration.yml  _test.yml  ci.yml  release.yml
etherip-xdp/: Cargo.toml  build.rs
etherip-xdp-common/: Cargo.toml
etherip-xdp-common/src/: data_path.rs  lib.rs
etherip-xdp-ebpf/: Cargo.toml
etherip-xdp-ebpf/src/: main.rs
etherip-xdp/src/: bpf.rs  config.rs  lib.rs  main.rs  netlink.rs  netns.rs  resolver.rs  tunnel.rs
etherip-xdp/src/control/: bpf.rs  config.rs  daemon.rs  mod.rs  netlink.rs  netns.rs  offload.rs  resolver.rs  server.rs  tunnel.rs  types.rs
etherip-xdp/src/manage/: co.0w0.etheripxdp.Management.varlink  ctl.rs  discovery.rs  mod.rs  proxy.rs  render.rs
etherip-xdp/tests/: data_path.rs  varlink_roundtrip.rs
packaging/: etherip-xdp-manager.service  etherip-xdp-manager.socket  etherip-xdp-varlink@.socket  etherip-xdp.sysusers  etherip-xdp.tmpfiles  etherip-xdp@.service
packaging/etc/etherip-xdp/interfaces.d/eth1/: example-explicit-mss.json  peer.json
packaging/maintainer-scripts/: postinst
test/: README.md
test-distro/: Cargo.toml
test-distro/src/: depmod.rs  lib.rs  modprobe.rs
test/benchmark-ec2/: .gitignore  README.md  constants.libsonnet  inputs.example.libsonnet  plan.md  template.jsonnet
test/benchmark-ec2/lib/: network.libsonnet  userdata.libsonnet
test/dut-distro/: Cargo.toml
test/dut-distro/src/: depmod.rs  init.rs  lib.rs  modprobe.rs
test/fuzzing/: Cargo.toml
test/fuzzing/fuzz_targets/: decap.rs  encap.rs  roundtrip.rs
test/fuzzing/src/: lib.rs
test/integration-test/: Cargo.toml
test/integration-test/src/: main.rs  sandbox.rs
xtask/: Cargo.toml
xtask/src/: build.rs  cpio.rs  deb.rs  freebsd.rs  local.rs  main.rs  vm.rs
