[package]
name = "etherip-xdp-common"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
user = ["aya"]
# Host `Packet` implementation (`data_path::HostPacket`) for tests and fuzzing.
host = []

[dependencies]
aya = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
