[package]
name = "etherip-xdp"
version = "0.1.0"
edition.workspace = true
description = "XDP-accelerated EtherIP (RFC 3378) over IPv6 tunnels"

license.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.deb]
maintainer = "Sorah Fukumori <her@sorah.jp>"
copyright = "2021 Takeru Hayasaka; 2026 Sorah Fukumori"
license-file = ["../LICENSE-MIT", "0"]
section = "net"
priority = "optional"
extended-description = """\
XDP-accelerated EtherIP (RFC 3378) over IPv6 tunnels. Ethernet frames are \
encapsulated in outer-Ethernet + IPv6 + EtherIP and moved between a physical \
uplink and a veth pair entirely in XDP, with one process per uplink driven by \
the templated etherip-xdp@<iface>.service unit and JSON config under \
/etc/etherip-xdp/interfaces.d/<iface>/."""
assets = [
    ["target/release/etherip-xdp", "usr/bin/", "755"],
    ["target/release/etherip-xdp-manager", "usr/bin/", "755"],
    ["target/release/etheripctl", "usr/bin/", "755"],
    # The varlink management units (host-wide manager + per-uplink control
    # socket) are shipped as plain assets rather than via [systemd-units]: the
    # package name `etherip-xdp` is both a prefix of these unit names *and* a
    # template (`etherip-xdp@.service`), so cargo-deb's package-template match
    # pulls `etherip-xdp@.service` into every extra `unit-name` group and
    # installs it renamed (e.g. `etherip-xdp-manager@.service`). Installing them
    # directly avoids that. They ship opt-in (nothing auto-enables them), so on
    # disk + a `systemctl daemon-reload` (by the admin / next boot) is all that's
    # needed.
    ["../packaging/etherip-xdp-manager.service", "usr/lib/systemd/system/", "644"],
    ["../packaging/etherip-xdp-manager.socket", "usr/lib/systemd/system/", "644"],
    ["../packaging/etherip-xdp-varlink@.socket", "usr/lib/systemd/system/", "644"],
    # The hardened units run as DynamicUsers sharing the static etherip-xdp-sock
    # group, which owns the 0660 control sockets and the /run/etherip-xdp dir.
    # dpkg's systemd triggers run systemd-sysusers / systemd-tmpfiles on these.
    ["../packaging/etherip-xdp.sysusers", "usr/lib/sysusers.d/etherip-xdp.conf", "644"],
    ["../packaging/etherip-xdp.tmpfiles", "usr/lib/tmpfiles.d/etherip-xdp.conf", "644"],
    ["../README.md", "usr/share/doc/etherip-xdp/README.md", "644"],
    ["../packaging/etc/etherip-xdp/interfaces.d/eth1/peer.json", "usr/share/doc/etherip-xdp/examples/interfaces.d/eth1/", "644"],
    ["../packaging/etc/etherip-xdp/interfaces.d/eth1/example-explicit-mss.json", "usr/share/doc/etherip-xdp/examples/interfaces.d/eth1/", "644"],
]

# Templated unit (etherip-xdp@.service): no default instance, and enable/start =
# false, so cargo-deb writes no maintainer scripts (the unit is just placed on
# disk). Enable per uplink with e.g. `systemctl enable --now etherip-xdp@eth1`;
# for the varlink management interface also
# `systemctl enable --now etherip-xdp-varlink@eth1.socket` and
# `systemctl enable --now etherip-xdp-manager.socket`.
[package.metadata.deb.systemd-units]
unit-name = "etherip-xdp"
unit-scripts = "../packaging"
enable = false
start = false

[dependencies]
etherip-xdp-common = { path = "../etherip-xdp-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
    "sync",
    "fs",
    # `process` is required by varlink's tokio feature (AsyncConnection::with_activate
    # /with_bridge); enabling it here turns it on for the unified tokio dependency.
    "process",
] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# The varlink-generated bindings reference `serde_derive` and `async_trait` directly.
serde_derive = "1"
rtnetlink = { workspace = true }
futures-util = { workspace = true }
nix = { workspace = true }
varlink = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
etherparse = { workspace = true }
tempfile = { workspace = true }
# The `host` feature adds `data_path::HostPacket`, which the data-path tests run
# alongside BPF_PROG_TEST_RUN to assert the eBPF program and the shared core agree
# byte for byte. Enabled only for test builds, so the daemon binary stays slim.
etherip-xdp-common = { path = "../etherip-xdp-common", features = ["host"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
etherip-xdp-ebpf = { path = "../etherip-xdp-ebpf" }
# Generates the varlink management-interface bindings into OUT_DIR.
varlink_generator = { workspace = true }

[lib]
name = "etherip_xdp"
path = "src/lib.rs"

[[bin]]
name = "etherip-xdp"
path = "src/main.rs"

[[bin]]
name = "etherip-xdp-manager"
path = "src/bin/manager.rs"

[[bin]]
name = "etheripctl"
path = "src/bin/etheripctl.rs"
