# A minimal "distro" for the VM-based integration tests: a PID-1 `init`, plus
# naive `modprobe`/`depmod` reimplementations good enough to load the handful of
# modules the tests need. Ported from aya's `test-distro`, with two changes:
# `modprobe` resolves module dependencies, and both tools understand zstd-
# compressed (`.ko.zst`) modules (which is what current mainline kernels ship).
[package]
name = "test-distro"
publish = false
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "init"
path = "src/init.rs"

[[bin]]
name = "modprobe"
path = "src/modprobe.rs"

[[bin]]
name = "depmod"
path = "src/depmod.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context"] }
glob = { workspace = true }
# Pure-Rust decompressors keep the static-musl guest binaries free of C deps.
lzma-rs = { workspace = true }
ruzstd = { workspace = true }
nix = { workspace = true, features = ["user", "fs", "mount", "reboot", "kmod", "feature"] }
object = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
