# The guest-side integration-test scenario. One static binary, run on both VMs
# (or both netns in local mode) with a `--role server|client`. It brings up the
# uplink, runs the real `etherip-xdp` daemon against a peer, then drives ICMP +
# TCP traffic through the resulting tunnel and asserts it round-trips.
[package]
name = "integration-test"
publish = false
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "etherip-xdp-e2e"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
caps = "0.5"
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context"] }
futures-util = { workspace = true }
nix = { workspace = true, features = ["signal", "user", "process", "fs"] }
rtnetlink = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "net", "io-util", "time", "process"] }
